kubernetes/devtest-taskserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedreader-devtest-taskserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedreader-devtest-taskserver
  template:
    metadata:
      labels:
        app: feedreader-devtest-taskserver
    spec:
      imagePullSecrets:
      - name: xyb-private-docker-registry
      containers:
      - name: feedreader-devtest-taskserver
        image: docker.xyb.name/feedreader-devtest/taskserver
        ports:
        - containerPort: 80
