kubernetes/taskserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frtasksrv
  namespace: yuboxie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frtasksrv
  template:
    metadata:
      labels:
        app: frtasksrv
    spec:
      containers:
      - name: frtasksrv
        image:  xieyubo/frtasksrv
      nodeSelector:
        kubernetes.io/arch: arm64
