kubernetes/devtest-textclassificationserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedreader-devtest-textclassificationserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedreader-devtest-textclassificationserver
  template:
    metadata:
      labels:
        app: feedreader-devtest-textclassificationserver
    spec:
      imagePullSecrets:
      - name: xyb-private-docker-registry
      containers:
      - name: feedreader-devtest-textclassificationserver
        image: docker.xyb.name/feedreader-devtest/textclassificationserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: feedreader-devtest-textclassificationserver
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: feedreader-devtest-textclassificationserver
